moving to ionic2 RC0

--- a/mobile-client/SeedProject/src/pages/hello-ionic/hello-ionic.html
+++ b/mobile-client/SeedProject/src/pages/hello-ionic/hello-ionic.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <button menuToggle>
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Hello Ionic</ion-title>
@@ -19,7 +19,7 @@
     Follow along on the tutorial section of the Ionic docs!
   </p>
   <p>
-    <button primary menuToggle>Toggle Menu</button>
+    <button ion-button menuToggle>Toggle Menu</button>
   </p>
 
 </ion-content>
