--- a/admin/index.html
+++ b/admin/index.html
@@ -1,17 +1,24 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Admin</title>
-    <link rel="stylesheet" href="node_modules/ng-admin/build/ng-admin.min.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="cache-control" content="max-age=0"/>
+        <meta http-equiv="cache-control" content="no-cache"/>
+        <meta http-equiv="expires" content="-1"/>
+        <meta http-equiv="Cache-Control" content="no-store"/>
+        <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"/>
+        <meta http-equiv="pragma" content="no-cache"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <title>Admin</title>
+        <link rel="stylesheet" href="node_modules/ng-admin/build/ng-admin.min.css">
+    </head>
 
-<body ng-app="myApp">
-    <div ui-view></div>
-    <script src="node_modules/ng-admin/build/ng-admin.min.js"></script>
-    <script src="environment.js" type="text/javascript"></script>
-    <script src="admin.js" type="text/javascript"></script>
-</body>
+    <body ng-app="myApp">
+        <div ui-view></div>
+        <script src="node_modules/ng-admin/build/ng-admin.min.js"></script>
+        <script src="environment.js" type="text/javascript"></script>
+        <script src="admin.js" type="text/javascript"></script>
+    </body>
 
 </html>
